# heictojpg

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prepare_benchmark.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml
src/: config.rs  converter.rs  error.rs  handlers.rs  main.rs  router.rs  state.rs  worker.rs
static/: app.js  benchmark.html  index.html  styles.css
static/benchmark/: manifest.json
