[package]
name = "heictojpg"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit", "timeout", "compression-gzip", "set-header", "request-id", "util"] }

# Image Processing
libheif-rs = "1.0"
turbojpeg = "1.1" # 1.1 is newer
image = { version = "0.25", default-features = false }

# Parallelism & Async
rayon = "1.10"

# Utilities
bytes = "1.6"
thiserror = "2.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }  # Strip debug logs in release
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"

# Channels
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
